fixed styling issue on small screens

--- a/src/components/Work/Work.scss
+++ b/src/components/Work/Work.scss
@@ -6,8 +6,6 @@
 .default-state {
   transition: opacity 0.3s ease;
   min-width: 272px;
-  max-width: 272px;
-  min-height: 63px;
   max-height: 63px;
 }
 
